==> nicogutz/ChessClock/src/mirf.c <==
#include "mirf.h"
#include "spi.h"
#include "delay.h"
#define NRF_CHANNEL_NR 114
#define NRF_PAYLOAD_SIZE 32
#define CE_PIN_LETTER GPIOC
#define CE_PIN_NUMBER GPIO_PIN_4
#define CSN_PIN_LETTER GPIOC
#define CSN_PIN_NUMBER GPIO_PIN_3

void Nrf24_getData(uint8_t *data) {
    GPIO_WriteLow(CSN_PIN_LETTER, CSN_PIN_NUMBER);   // Pull down chip select
    spi_transfer(R_RX_PAYLOAD);                      // Send cmd to read rx payload
    spi_read_byte(data, NRF_PAYLOAD_SIZE);           // Read payload
    GPIO_WriteHigh(CSN_PIN_LETTER, CSN_PIN_NUMBER);  // Pull up chip select
    // NVI: per product spec, p 67, note c:
    // "The RX_DR IRQ is asserted by a new packet arrival event. The procedure
    // for handling this interrupt should be: 1) read payload through SPI,
    // 2) clear RX_DR IRQ, 3) read FIFO_STATUS to check if there are more
    // payloads available in RX FIFO, 4) if there are more data in RX FIFO,
    // repeat from step 1)."
    // So if we're going to clear RX_DR here, we need to check the RX FIFO
    // in the dataReady() function
    Nrf24_configRegister(STATUS, (1 << RX_DR));  // Reset status register
}

void Nrf24_configRegister(uint8_t reg, uint8_t value) {
    GPIO_WriteLow(CSN_PIN_LETTER, CSN_PIN_NUMBER);
    spi_transfer(W_REGISTER | (REGISTER_MASK & reg));
    spi_transfer(value);
    GPIO_WriteHigh(CSN_PIN_LETTER, CSN_PIN_NUMBER);
}

void Nrf24_readRegister(uint8_t reg, uint8_t *value, uint8_t len) {
    GPIO_WriteLow(CSN_PIN_LETTER, CSN_PIN_NUMBER);
    spi_transfer(R_REGISTER | (REGISTER_MASK & reg));

    spi_read_byte(value, len);

    GPIO_WriteHigh(CSN_PIN_LETTER, CSN_PIN_NUMBER);
}

void Nrf24_writeRegister(uint8_t reg, uint8_t *value, uint8_t len) {
    GPIO_WriteLow(CSN_PIN_LETTER, CSN_PIN_NUMBER);
    spi_transfer(W_REGISTER | (REGISTER_MASK & reg));
    spi_write_byte(value, len);
    GPIO_WriteHigh(CSN_PIN_LETTER, CSN_PIN_NUMBER);
}

void Nrf24_send(uint8_t *value, bool *PTX) {
    uint8_t status;
    status = Nrf24_getStatus();

    while (*PTX)  // Wait until last paket is send
    {
        status = Nrf24_getStatus();
        if ((status & ((1 << TX_DS) | (1 << MAX_RT)))) {
            (*PTX) = 0;
            break;
        }
    }

    Nrf24_ceLow();
    Nrf24_powerUpTx(PTX);                           // Set to transmitter mode , Power up
    GPIO_WriteLow(CSN_PIN_LETTER, CSN_PIN_NUMBER);  // Pull down chip select
    spi_transfer(FLUSH_TX);                         // Write cmd to flush tx fifo
    GPIO_WriteHigh(CSN_PIN_LETTER, CSN_PIN_NUMBER);
    GPIO_WriteLow(CSN_PIN_LETTER, CSN_PIN_NUMBER);  // Pull down chip select
    spi_transfer(W_TX_PAYLOAD);                     // Write cmd to write payload
    spi_write_byte(value, NRF_PAYLOAD_SIZE);        // Write payload
    GPIO_WriteHigh(CSN_PIN_LETTER, CSN_PIN_NUMBER);
    Nrf24_ceHi();  // Start transmission
}

bool Nrf24_isSend(int timeout, bool *PTX) {
    uint8_t status;
    uint32_t i = 0;

    if (*PTX) {
        while (1) {
            status = Nrf24_getStatus();
            /*
                    if sending successful (TX_DS) or max retries exceded (MAX_RT).
            */

            if (status & (1 << TX_DS)) {  // Data Sent TX FIFO interrup
                Nrf24_powerUpRx(PTX);
                return TRUE;
            }

            if (status & (1 << MAX_RT)) {  // Maximum number of TX retries interrupt
                Nrf24_powerUpRx(PTX);
                return FALSE;
            }

            i++;
            // TODO CHECK IF IT WORKS!
            // I believe either TX_DS or MAX_RT will always be notified.
            // Therefore, it is unusual for neither to be notified for a period of time.
            // I don't know exactly how to respond.
            if (i < ((F_CPU / 18 / 1000UL) * timeout)) {
                return FALSE;
            }
            delay_ms(1);
        }
    }
    return FALSE;
}

void Nrf24_flushRx() {
    GPIO_WriteLow(CSN_PIN_LETTER, CSN_PIN_NUMBER);
    spi_transfer(FLUSH_RX);
    GPIO_WriteHigh(CSN_PIN_LETTER, CSN_PIN_NUMBER);
}

void Nrf24_ceHi() {
    GPIO_WriteHigh(CE_PIN_LETTER, CE_PIN_NUMBER);
}

void Nrf24_ceLow() {
    GPIO_WriteLow(CE_PIN_LETTER, CE_PIN_NUMBER);
}

void Nrf24_SetSpeedDataRates(uint8_t val) {
    if (val > 2)
        return;

    uint8_t value;
    Nrf24_readRegister(RF_SETUP, &value, 1);
    if (val == 2) {
        value = value | 0x20;
        value = value & 0xF7;
        // Nrf24_configRegister(RF_SETUP,	(1 << RF_DR_LOW) );
        Nrf24_configRegister(RF_SETUP, value);
    } else {
        value = value & 0xD7;
        value = value | (val << RF_DR_HIGH);
        // Nrf24_configRegister(RF_SETUP,	(val << RF_DR_HIGH) );
        Nrf24_configRegister(RF_SETUP, value);
    }
}
