==> midnight312/esp32_official/do_an_3/test1/main/mirf.c <==
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include <driver/spi_master.h>
#include <driver/gpio.h>
#include "esp_log.h"
#include "mirf.h"
#define TAG "NRF24"
#define LCD_HOST    HSPI_HOST
#define LCD_HOST    SPI2_HOST
#define LCD_HOST    SPI2_HOST

extern void Nrf24_getData(NRF24_t * dev, uint8_t * data)// Reads payload bytes into data array
{
	Nrf24_csnLow(dev);								 // Pull down chip select
	Nrf24_transfer(dev, R_RX_PAYLOAD );			 // Send cmd to read rx payload
	Nrf24_transferSync(dev, data, data, dev->payload);		// Read payload
	Nrf24_csnHi(dev);								 // Pull up chip select
	// NVI: per product spec, p 67, note c:
	//	"The RX_DR IRQ is asserted by a new packet arrival event. The procedure
	//	for handling this interrupt should be: 1) read payload through SPI,
	//	2) clear RX_DR IRQ, 3) read FIFO_STATUS to check if there are more
	//	payloads available in RX FIFO, 4) if there are more data in RX FIFO,
	//	repeat from step 1)."
	// So if we're going to clear RX_DR here, we need to check the RX FIFO
	// in the dataReady() function
	Nrf24_configRegister(dev, STATUS, (1 << RX_DR)); // Reset status register
}

void Nrf24_configRegister(NRF24_t * dev, uint8_t reg, uint8_t value)  // Clocks only one byte into the given MiRF register
{
	Nrf24_csnLow(dev);
	Nrf24_transfer(dev, W_REGISTER | (REGISTER_MASK & reg));
	Nrf24_transfer(dev, value);
	Nrf24_csnHi(dev);
}

void Nrf24_readRegister(NRF24_t * dev, uint8_t reg, uint8_t * value, uint8_t len)// Reads an array of bytes from the given start position in the MiRF registers.
{
	Nrf24_csnLow(dev);
	Nrf24_transfer(dev, R_REGISTER | (REGISTER_MASK & reg));
	Nrf24_transferSync(dev, value, value, len);
	Nrf24_csnHi(dev);
}

void Nrf24_writeRegister(NRF24_t * dev, uint8_t reg, uint8_t * value, uint8_t len)// Writes an array of bytes into inte the MiRF registers.
{
	Nrf24_csnLow(dev);
	Nrf24_transfer(dev, W_REGISTER | (REGISTER_MASK & reg));
	Nrf24_transmitSync(dev, value, len);
	Nrf24_csnHi(dev);
}

void Nrf24_send(NRF24_t * dev, uint8_t * value)  // Sends a data package to the default address. Be sure to send the correct
									// amount of bytes as configured as payload on the receiver.
{
	uint8_t status;
	status = Nrf24_getStatus(dev);
	while (dev->PTX)				// Wait until last paket is send
	{
		status = Nrf24_getStatus(dev);
		if ((status & ((1 << TX_DS)  | (1 << MAX_RT))))
		{
			dev->PTX = 0;
			break;
		}
	}
	Nrf24_ceLow(dev);
	Nrf24_powerUpTx(dev);		// Set to transmitter mode , Power up
	Nrf24_csnLow(dev);					  // Pull down chip select
	Nrf24_transfer(dev, FLUSH_TX );		// Write cmd to flush tx fifo
	Nrf24_csnHi(dev);					 // Pull up chip select
	Nrf24_csnLow(dev);					  // Pull down chip select
	Nrf24_transfer(dev, W_TX_PAYLOAD ); // Write cmd to write payload
	Nrf24_transmitSync(dev, value, dev->payload);  // Write payload
	Nrf24_csnHi(dev);					 // Pull up chip select
	Nrf24_ceHi(dev);					 // Start transmission
}

bool Nrf24_isSend(NRF24_t * dev) {
  uint8_t status;
  if (dev->PTX) {
    while(1) {
      status = Nrf24_getStatus(dev);
      /*
        if sending successful (TX_DS) or max retries exceded (MAX_RT).
      */

      if (status & (1 << TX_DS)) { // Data Sent TX FIFO interrup
        Nrf24_powerUpRx(dev);
        return true;
      }

      if (status & (1 << MAX_RT)) { // Maximum number of TX retries interrupt
        Nrf24_powerUpRx(dev);
        return false;
      }
      vTaskDelay(1);
    }
  }
  return false;
}

void Nrf24_flushRx(NRF24_t * dev)
{
	Nrf24_csnLow(dev);
	Nrf24_transfer(dev, FLUSH_RX );
	Nrf24_csnHi(dev);
}

void Nrf24_ceHi(NRF24_t * dev) {
	gpio_set_level( dev->cePin, 1 );
}

void Nrf24_ceLow(NRF24_t * dev) {
	gpio_set_level( dev->cePin, 0 );
}

void Nrf24_SetSpeedDataRates(NRF24_t * dev, uint8_t val) //Select between the high speed data rates:0=1Mbps, 1=2Mbps, 2=250Kbps
{
   if(val>1)
   {
	   Nrf24_configRegister(dev, RF_SETUP,	(1 << RF_DR_LOW) );
   }
   else
   {
	   Nrf24_configRegister(dev, RF_SETUP,	(val << RF_DR_HIGH) );
   }
}
